{
    "name": "inputplayer1",
    "maps": [
        {
            "name": "Player1",
            "id": "83b36ee3-b765-4c78-b8d1-75bcac4dc293",
            "actions": [
                {
                    "name": "Mover",
                    "type": "Value",
                    "id": "07a883f5-3072-4d48-a8a5-47b78f005cea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpShot",
                    "type": "Button",
                    "id": "87a06195-21ba-429f-8374-039bf90cc97b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpShotSpin",
                    "type": "Button",
                    "id": "1eb76a8b-02c5-4071-996e-ac3c8ed3868a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LayUp",
                    "type": "Button",
                    "id": "476ac070-2657-4b39-9f1a-dd79d89c2350",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StepBack",
                    "type": "Button",
                    "id": "63985dfe-52f9-4e3f-9f59-dc07eb23dc1c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pausar",
                    "type": "Button",
                    "id": "81e28b58-5a57-4371-9c50-cd0d47b12fdb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c01d5860-e742-4857-b2d3-ffe0da1116a5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6aa4090-3043-46da-9a36-ae5ff6022ebd",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dafe1770-b43d-43cb-b89a-1159748ffa56",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce76c840-a765-4728-8fec-83328a328e35",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpShotSpin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6626dd1a-cd91-40a2-9cd5-5f5688d98129",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LayUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f568102-520a-40e4-9e4b-a234b17928aa",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3680151-ebda-4c4e-b1af-e5bbf3cd4d53",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pausar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9ee8024-f707-4ae5-9854-a366db51ab77",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pausar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}